# htpa32x32d-rs

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config
.github/workflows/: rust.yml
examples/: f3-example.rs  nrf52840-st7735.rs
nrf52840-examples/: Cargo.toml
nrf52840-examples/.cargo/: config
nrf52840-examples/examples/: nrf52840-st7735.rs
src/: lib.rs  table.rs
src/interface/: i2c.rs  mod.rs
src/tests/: mod.rs
