[package]
name = "htpa32x32d"
version = "0.2.0"
authors = ["Tobias Breitwieser <tobias@breitwieser.biz>"]
edition = "2018"
exclude = [".gitignore", ".github"]
documentation = "https://docs.rs/htpa32x32d"
keywords = ["no-std", "htpa32x32d", "embedded", "embedded-hal-driver"]
categories = ["embedded", "no-std"]
readme = "README.md"
description = "Driver for the HTPA32x32 an Thermopile Array from Heimann"
license = "Apache-2.0"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
embedded-hal = "^0.2"
#bit_field = "0.10.0"
#libm = "0.2.1"


[dev-dependencies]
cortex-m = "^0.6"
cortex-m-rt = "^0.6"
panic-semihosting = "^0.5"
cortex-m-semihosting = "0.3.5"
nrf52840-hal = "^0.8"
shared-bus = { version = "0.1.4", features = ["cortexm"] }
embedded-graphics = "0.5"
heapless = "0.4.0"
ssd1306 = "0.2.6"
st7735-lcd = {version = "0.6.1", features = ["graphics"] }

