[package]
name = "htpa32x32d"
version = "0.2.0"
authors = ["Tobias Breitwieser <tobias@breitwieser.biz>"]
edition = "2018"
exclude = [".gitignore", ".github"]
documentation = "https://docs.rs/htpa32x32d"
keywords = ["no-std", "htpa32x32d", "embedded", "embedded-hal-driver"]
categories = ["embedded", "no-std"]
readme = "README.md"
description = "Driver for the HTPA32x32 an Thermopile Array from Heimann"
license = "Apache-2.0"
repository = "https://github.com/tarfu/htpa32x32d-rs"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
embedded-hal = "^0.2"
bit_field = "0.10.0"
#libm = "0.2.1"


[dev-dependencies]
embedded-hal-mock = "^0.7"



